--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,9 @@
+@import url("https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap");
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+html {
+  background-color: #333333;
+  font-family: "Lato", sans-serif;
+}
